Fix site nav padding
The padding in the site nav causes the title to be indented further
right than the list of contents, and creates a gap between the
scrollbar and the right side of the site nav.

Let's move the padding to the inner div that wraps the content
so that the padding is not applied for the scrollbar, and applied
for all content within the site nav.

Let's also update the bootstrap spacing classes for the list
elements inside the site nav to ensure that it is consistent
with the padding of other content in the site nav.

--- a/test/functional/test_site_algolia_plugin/expected/markbind/css/markbind.css
+++ b/test/functional/test_site_algolia_plugin/expected/markbind/css/markbind.css
@@ -115,8 +115,11 @@ footer {
 
 /* Side Navigation menus */
 
-.spacer-top {
-    /* This class is to ensure adequate spacing of contents from the top of the page */
+.site-nav-spacer {
+    /* This class is to ensure adequate spacing of contents from the top and
+    sides of the site nav */
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 1rem;
 }
 
